video section completed

--- a/YouTube Clone/YouTube.html
+++ b/YouTube Clone/YouTube.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,12 +9,14 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
 
   <link rel="stylesheet" href="styles/General.css">
   <link rel="stylesheet" href="styles/video.css">
 
 </head>
+
 <body>
 
 
@@ -24,7 +27,7 @@
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-1.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-1.jpeg" alt="">
@@ -41,15 +44,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-2.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-2.jpeg" alt="">
@@ -66,15 +69,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-3.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-3.jpeg" alt="">
@@ -91,15 +94,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-4.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-4.jpeg" alt="">
@@ -116,15 +119,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-5.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-5.jpeg" alt="">
@@ -141,15 +144,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-6.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-6.jpeg" alt="">
@@ -166,15 +169,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-7.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-7.jpeg" alt="">
@@ -191,15 +194,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
-  
+
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-8.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-8.jpeg" alt="">
@@ -216,15 +219,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
 
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-9.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-9.jpeg" alt="">
@@ -241,15 +244,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
 
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-10.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-10.jpeg" alt="">
@@ -266,15 +269,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
 
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-11.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-11.jpeg" alt="">
@@ -291,15 +294,15 @@
           </p>
         </div>
       </div>
-  
+
     </div>
 
     <div class="video-preview">
-  
+
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-12.webp" alt="">
       </div>
-  
+
       <div class="video-info-row">
         <div class="profile-pic-row">
           <img class="profile-pic" src="channels-picture/channel-12.jpeg" alt="">
@@ -316,11 +319,12 @@
           </p>
         </div>
       </div>
-  
+
     </div>
 
   </div>
-  
-  
+
+
 </body>
+
 </html>
