--- a/YouTube Clone/YouTube.html
+++ b/YouTube Clone/YouTube.html
@@ -13,11 +13,82 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="styles/General.css">
+  <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/sidebar.css">
   <link rel="stylesheet" href="styles/video.css">
+
 
 </head>
 
 <body>
+
+  <div class="header">
+
+    <div class="left-section">
+      
+      <img class="hamburger-icon" src="icons/hamburger-menu.svg" alt="">
+      <img class="youtube-logo-icon" src="icons/youtube-logo.svg" alt="">
+
+    </div>
+
+    <div class="middle-section">
+
+      <input class="search-bar" type="text" placeholder="Search">
+
+      <button class="search-button">
+        <img class="search-icon" src="icons/search.svg" alt="">
+      </button>
+
+      <button class="voice-search-button">
+        <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+      </button>
+
+    </div>
+
+    <div class="right-section">
+
+      <img src="icons/upload.svg" alt="" class="uplaod-icon">
+      <img src="icons/youtube-apps.svg" alt="" class="youtube-apps-icon">
+      <div class="notification-box">
+        <img src="icons/notifications.svg" alt="" class="notifications-icon">
+        <div class="notification-count">3</div>
+      </div>
+      <img src="channels-picture/cat.jpg" alt="" class="user-profile-pic">
+
+    </div>
+
+  </div>
+
+
+  <div class="sidebar">
+
+    <div class="sidebar-link">
+      <img src="icons/home.svg" alt="">
+      <div class="sidebar-title">Home</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="icons/explore.svg" alt="">
+      <div class="sidebar-title">Explore</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="icons/subscriptions.svg" alt="">
+      <div class="sidebar-title">subscriptions</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="icons/originals.svg" alt="">
+      <div class="sidebar-title">Originals</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="icons/youtube-music.svg" alt="">
+      <div class="sidebar-title">YouTube Music</div>
+    </div>
+    <div class="sidebar-link">
+      <img src="icons/library.svg" alt="">
+      <div class="sidebar-title">Library</div>
+    </div>
+
+  </div>
+
 
 
   <div class="video-grid">
@@ -26,6 +97,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-1.webp" alt="">
+        <div class="video-time">14:20</div>
       </div>
 
       <div class="video-info-row">
@@ -51,6 +123,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-2.webp" alt="">
+        <div class="video-time">8:22</div>
       </div>
 
       <div class="video-info-row">
@@ -76,6 +149,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-3.webp" alt="">
+        <div class="video-time">9:13</div>
       </div>
 
       <div class="video-info-row">
@@ -101,6 +175,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-4.webp" alt="">
+        <div class="video-time">22:09</div>
       </div>
 
       <div class="video-info-row">
@@ -126,6 +201,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-5.webp" alt="">
+        <div class="video-time">11:17</div>
       </div>
 
       <div class="video-info-row">
@@ -151,6 +227,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-6.webp" alt="">
+        <div class="video-time">19:59</div>
       </div>
 
       <div class="video-info-row">
@@ -176,6 +253,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-7.webp" alt="">
+        <div class="video-time">10:13</div>
       </div>
 
       <div class="video-info-row">
@@ -201,6 +279,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-8.webp" alt="">
+        <div class="video-time">7:12</div>
       </div>
 
       <div class="video-info-row">
@@ -226,6 +305,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-9.webp" alt="">
+        <div class="video-time">13:!7</div>
       </div>
 
       <div class="video-info-row">
@@ -251,6 +331,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-10.webp" alt="">
+        <div class="video-time">7:53</div>
       </div>
 
       <div class="video-info-row">
@@ -276,6 +357,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-11.webp" alt="">
+        <div class="video-time">4:10</div>
       </div>
 
       <div class="video-info-row">
@@ -301,6 +383,7 @@
 
       <div class="thumbnail-row">
         <img class="thumbnail" src="Thumbnails/thumbnail-12.webp" alt="">
+        <div class="video-time">4:51</div>
       </div>
 
       <div class="video-info-row">
