Modified YouTube tooltip

--- a/YouTube Clone/YouTube.html
+++ b/YouTube Clone/YouTube.html
@@ -25,7 +25,7 @@
   <div class="header">
 
     <div class="left-section">
-      
+
       <img class="hamburger-icon" src="icons/hamburger-menu.svg" alt="">
       <img class="youtube-logo-icon" src="icons/youtube-logo.svg" alt="">
 
@@ -37,21 +37,32 @@
 
       <button class="search-button">
         <img class="search-icon" src="icons/search.svg" alt="">
+        <div class="tooltip">Search</div>
       </button>
 
       <button class="voice-search-button">
         <img class="voice-search-icon" src="icons/voice-search-icon.svg" alt="">
+        <div class="tooltip">Search with your voice</div>
       </button>
 
     </div>
 
     <div class="right-section">
 
-      <img src="icons/upload.svg" alt="" class="uplaod-icon">
-      <img src="icons/youtube-apps.svg" alt="" class="youtube-apps-icon">
+      <div class="upload-box">
+        <img src="icons/upload.svg" alt="" class="uplaod-icon">
+        <div class="tooltip">Create</div>
+      </div>
+
+      <div class="youtube-apps-box">
+        <img src="icons/youtube-apps.svg" alt="" class="youtube-apps-icon">
+        <div class="tooltip">YouTube apps</div>
+      </div>
+
       <div class="notification-box">
         <img src="icons/notifications.svg" alt="" class="notifications-icon">
         <div class="notification-count">3</div>
+        <div class="tooltip">Notifications</div>
       </div>
       <img src="channels-picture/cat.jpg" alt="" class="user-profile-pic">
 
@@ -96,17 +107,23 @@
     <div class="video-preview">
 
       <div class="thumbnail-row">
-        <img class="thumbnail" src="Thumbnails/thumbnail-1.webp" alt="">
+        <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+          <img class="thumbnail" src="Thumbnails/thumbnail-1.webp" alt="">
+        </a>
         <div class="video-time">14:20</div>
       </div>
 
       <div class="video-info-row">
         <div class="profile-pic-row">
-          <img class="profile-pic" src="channels-picture/channel-1.jpeg" alt="">
+          <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+            <img class="profile-pic" src="channels-picture/channel-1.jpeg" alt="">
+          </a>
         </div>
         <div class="video-info">
           <p class="video-title">
-            Talking Tech and AI with Google Sundar Pichai!
+            <a href="https://www.youtube.com/watch?v=n2RNcPRtAiY">
+              Talking Tech and AI with Google Sundar Pichai!
+            </a>
           </p>
           <p class="video-author">
             Marques Browniee
