working on header

--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -10,7 +10,13 @@
 </head>
 <body>
   
-  <header class="header">
+  <header>
+
+    <nav class="header">
+      <div class="left">left</div>
+      <div class="middle">middle</div>
+      <div class="right">right</div>
+    </nav>
     
   </header>
 
