--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -1,24 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Amazon Clone</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="stylesheet" href="styles/General.css">
   <link rel="stylesheet" href="styles/header.css">
 </head>
+
 <body>
-  
+
   <header>
 
     <nav class="header">
-      <div class="left">left</div>
-      <div class="middle">middle</div>
-      <div class="right">right</div>
+
+      <div class="logo-box border">
+        <div class="amazon-logo"></div>
+      </div>
+
+      <div class="deliver-box border">
+        <div class="deliver-to">Deliver to</div>
+        <div class="deliver-row">
+          <i class="fa-solid fa-location-dot"></i>
+          <div class="country-deliver-para">Pakistan</div>
+        </div>
+      </div>
+
+      <div class="search-row">
+        <select class="select-option">
+          <option value="">All</option>
+        </select>
+        <input class="search-bar" type="text" placeholder="Search Amazon">
+        <div class="search-icon">
+          <i class="fa-solid fa-magnifying-glass"></i>
+        </div>
+      </div>
+
     </nav>
-    
+
   </header>
 
 </body>
+
 </html>
