--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -20,7 +20,21 @@
 
     <nav class="header">
 
-      <div class="logo-box border">
+      <div class="left">
+        <div class="logo-box border">
+          <div class="amazon-logo"></div>
+        </div>
+  
+        <div class="deliver-box border">
+          <div class="deliver-to">Deliver to</div>
+          <div class="deliver-row">
+            <i class="fa-solid fa-location-dot"></i>
+            <div class="country-deliver-para">Pakistan</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- <div class="logo-box border">
         <div class="amazon-logo"></div>
       </div>
 
@@ -30,7 +44,7 @@
           <i class="fa-solid fa-location-dot"></i>
           <div class="country-deliver-para">Pakistan</div>
         </div>
-      </div>
+      </div> -->
 
       <div class="search-row">
         <select class="select-option">
@@ -42,7 +56,53 @@
         </div>
       </div>
 
+      <div class="div right">
+        <div class="sign-in-box border">
+          <div class="sign-in">Hello, sign in</div>
+          <div class="Accounts-list">Accounts & Lists</div>
+        </div>
+  
+        <div class="Order-return border">
+          <div class="sign-in">Returns</div>
+          <div class="Accounts-list">& Orders</div>
+        </div>
+  
+        <div class="Cart-box border">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <Span class="cart-para">Cart</Span>
+        </div>
+      </div>
+      <!-- <div class="sign-in-box border">
+        <div class="sign-in">Hello, sign in</div>
+        <div class="Accounts-list">Accounts & Lists</div>
+      </div>
+
+      <div class="Order-return border">
+        <div class="sign-in">Returns</div>
+        <div class="Accounts-list">& Orders</div>
+      </div>
+
+      <div class="Cart-box border">
+        <i class="fa-solid fa-cart-shopping"></i>
+        <Span class="cart-para">Cart</Span>
+      </div> -->
+
     </nav>
+
+    <div class="nav-section">
+      <div class="hamburger border">
+        <i class="fa-solid fa-bars"></i>
+        <span>All</span>
+      </div>
+
+      <div class="list-row">
+        <span class="border">Today's Deals</span>
+        <span class="border">Customer Service</span>
+        <span class="border">Registry</span>
+        <span class="border">Gift Cards</span>
+        <span class="border">Sell</span>
+      </div>
+    </div>
 
   </header>
 
