--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -12,6 +12,8 @@
 
   <link rel="stylesheet" href="styles/General.css">
   <link rel="stylesheet" href="styles/header.css">
+  <link rel="stylesheet" href="styles/main.css">
+
 </head>
 
 <body>
@@ -24,7 +26,7 @@
         <div class="logo-box border">
           <div class="amazon-logo"></div>
         </div>
-  
+
         <div class="deliver-box border">
           <div class="deliver-to">Deliver to</div>
           <div class="deliver-row">
@@ -61,12 +63,12 @@
           <div class="sign-in">Hello, sign in</div>
           <div class="Accounts-list">Accounts & Lists</div>
         </div>
-  
+
         <div class="Order-return border">
           <div class="sign-in">Returns</div>
           <div class="Accounts-list">& Orders</div>
         </div>
-  
+
         <div class="Cart-box border">
           <i class="fa-solid fa-cart-shopping"></i>
           <Span class="cart-para">Cart</Span>
@@ -105,6 +107,67 @@
     </div>
 
   </header>
+
+  <main>
+
+    <div class="img">
+      <img src="images/displayimage.jpg" alt="" class="main-image">
+    </div>
+    
+
+    <div class="grid">
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+      <div class="item-chart">
+        <h2>Get Your game on</h2>
+        <img src="images/box1_image.jpg" alt="">
+        <span>Shop Gaming</span>
+      </div>
+
+    </div>
+
+  </main>
 
 </body>
 
