update main section

--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -118,51 +118,51 @@
     <div class="grid">
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
+        <h2>Shop Clothes</h2>
         <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Personal items</h2>
+        <img src="images/box2_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Shop furniture now</h2>
+        <img src="images/box3_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Buy phone</h2>
+        <img src="images/box4_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Level up your beauty routine</h2>
+        <img src="images/box5_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Pets</h2>
+        <img src="images/box6_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Explore</h2>
+        <img src="images/box7_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
       <div class="item-chart">
-        <h2>Get Your game on</h2>
-        <img src="images/box1_image.jpg" alt="">
-        <span>Shop Gaming</span>
+        <h2>Shop deals in Fashion</h2>
+        <img src="images/box8_image.jpg" alt="">
+        <span>Shop now</span>
       </div>
 
     </div>
