working on footer

--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="styles/General.css">
   <link rel="stylesheet" href="styles/header.css">
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/footer.css">
 
 </head>
 
@@ -168,6 +169,18 @@
     </div>
 
   </main>
+
+  <footer>
+    
+    <div class="back-top">
+      Back to top
+    </div>
+
+    <div class="more-info">
+     
+    </div>
+
+  </footer>
 
 </body>
 
