--- a/Amazon Clone/Amazon.html
+++ b/Amazon Clone/Amazon.html
@@ -180,7 +180,7 @@
 
       <div class="info-box">
 
-        
+
         <ul>
           <div class="heading">Get to Know Us</div>
           <a href="">Careers</a>
@@ -191,7 +191,7 @@
           <a href="">Amazon Science</a>
         </ul>
 
-        
+
         <ul class="footer-list-2">
           <div class="heading">Make Money with Us</div>
           <a href="">Sell products on Amazon</a>
@@ -201,7 +201,7 @@
           <a href="">Advertise Your Products</a>
           <a href="">Self-Publish with Us</a>
           <a href="">Host an Amazon Hub</a>
-          <a href="">›See More Make Money with Us</a>
+          <a href="">› See More Make Money with Us</a>
         </ul>
 
         <ul class="footer-list-3">
@@ -225,6 +225,20 @@
 
       </div>
 
+    </div>
+
+    <div class="footer-amazon-logo">
+      <img src="images/amazon_logo.png" alt="">
+    </div>
+
+    <div class="footer-last-section">
+      <ul>
+        <a href="">Conditions of Use</a>
+        <a href="">Privacy Notice</a>
+        <a href="">Consumer Health Data Privacy Disclosure</a>
+        <a href="">Your Ads Privacy Choices</a>
+      </ul>
+      <span>© 1996-2025, Amazon.com, Inc. or its affiliates</span>
     </div>
 
   </footer>
