--- a/Netflix Clone/Netflix.html
+++ b/Netflix Clone/Netflix.html
@@ -13,6 +13,7 @@
 
 <body>
 
+  
   <div class="background-image">
 
     <nav class="header">
@@ -26,7 +27,10 @@
 
      <!-- image opacity -->
     <div class="background-opacity-image"></div>
+
   </div>
+
+  <div class="border-line"></div>
 
 
 </body>
