main section completed

--- a/Netflix Clone/Netflix.html
+++ b/Netflix Clone/Netflix.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  
+
   <div class="background-image">
 
     <nav class="header">
@@ -25,7 +25,18 @@
       </div>
     </nav>
 
-     <!-- image opacity -->
+    <div class="main-content-box">
+
+      <h1>Unlimited movies, TV shows, and more</h1>
+      <p>Starts at Rs 250. Cancel anytime.</p>
+      <h3>Ready to watch? Enter your email to create or restart your membership.</h3>
+      <div class="input-btn-box">
+        <input type="email" placeholder="Email Address" class="email-input">
+        <button>Get Started &gt;</button>
+      </div>
+    </div>
+
+    <!-- image opacity -->
     <div class="background-opacity-image"></div>
 
   </div>
